--- a/locales/es/LC_MESSAGES/messages.po
+++ b/locales/es/LC_MESSAGES/messages.po
@@ -217,7 +217,7 @@ msgid "Help desk homepage"
 msgstr "Página de soporte técnico"
 
 msgid "Help! I don't remember my password."
-msgstr "&iexcl;Socorro! Se me ha olvidado mi clave de acceso."
+msgstr "¡Socorro! Se me ha olvidado mi clave de acceso."
 
 msgid "Here is the metadata that SimpleSAMLphp has generated for you. You may send this metadata document to trusted partners to setup a trusted federation."
 msgstr "Aquí están los metadatos que SimpleSAMLphp ha generado. Puede enviar este documento de metadatos a sus socios de confianza para configurar una federación."
@@ -689,7 +689,7 @@ msgid "When this identity provider tried to create an authentication response, a
 msgstr "El proveedor de identidad ha detectado un error al crear respuesta de autenticaci&oacute;n."
 
 msgid "Without your username and password you cannot authenticate yourself for access to the service. There may be someone that can help you. Consult the help desk at your organization!"
-msgstr "&iexcl;Muy mal! - Sin su nombre de usuario y su clave de acceso usted no se puede identificar y acceder al servicio. A lo mejor hay alguien que puede ayudarle. &iexcl;P&oacute;ngase en contacto con el centro de ayuda de su universidad!"
+msgstr "¡Muy mal! - Sin su nombre de usuario y su clave de acceso usted no se puede identificar y acceder al servicio. A lo mejor hay alguien que puede ayudarle. &iexcl;P&oacute;ngase en contacto con el centro de ayuda de su universidad!"
 
 msgid "World"
 msgstr "Mundo"
